# aw-import-ical

./: .gitignore  Makefile  Pipfile  README.md  main.py  pyproject.toml  synchronize.py
.github/workflows/: codeql.yml
