[tool.poetry]
name = "aw-import-ical"
version = "0.1.0"
description = "An .ical importer and Google Calendar synchronizer for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aw-core = "^0.5.0"
aw-client = "^0.5.0"
icalendar = "^4.0.7"
google-api-python-client = "^2.3.0"
google-auth-oauthlib = "^0.4.4"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
